[package]
name = "native-iqa"
version = "1.0.0"
edition = "2021"
rust-version = "1.88"

[lib]
crate-type = ["cdylib"]
name = "native_iqa"

[dependencies]
napi = { version = "3", default-features = false, features = ["napi4"] }
napi-derive = "3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "bmp", "tiff"] }
rayon = "1.10"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
